fix bug with working time in task2